# streamable-mcp-serverless

./: Dockerfile  Dockerfile.python  README.md  build_and_push.sh  deploy.py  deploy_mcp_lambda.py  package-lock.json  package.json  payload.json  pyproject.toml  tsconfig.json
docs/: audience-benefits.md  conclusion.md  linkedin-post.md  technical-analysis.md
src/: client.js  client.ts  logging.js  mcpClientUtils.ts  mcpServer.js  mcpServer.ts  mcpServer_not_needed.ts  mcpTransport.ts  package.json  server.js  server.py  server.ts  working_server.ts
src/auth/: auth.py  cognito.ts  index.ts  lambdaAuth.ts  oauthMetadata.ts
terraform/: apigateway.tf  lambda.tf  outputs.tf  provider.tf
