[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server on AWS Lambda"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Amit Arora", email = "aa1603@georgetown.edu"}
]
dependencies = [
    "boto3>=1.37.37",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "lambda"]
